Alignment issue fix for safari (#4509)
* Allignment issue fix for safari

* vertical alignment

--- a/investigate-hosts/app/styles/investigate-hosts/components/host-detail/_host-process.scss
+++ b/investigate-hosts/app/styles/investigate-hosts/components/host-detail/_host-process.scss
@@ -3,11 +3,12 @@
   color: text-color(primary, lightest);
   background-color: $table-panel-header-color;
   height: 70px;
+  line-height: 3rem;
   .title {
     padding-left: rsa-whitespace();
   }
   .toggle-icon {
-    padding-top: 27px;
+    padding-top: 1rem;
     float: right;
     padding-right: 23px;
     .toggle-tree-view-label {
@@ -22,19 +23,21 @@
     }
   }
   .process-list-actions {
-    display: inline-block;
     padding-left: rsa-whitespace();
-    margin-right: -10px;
-    padding-top: 21px;
+    float: left;
+    padding-top: 1rem;
     .process-tab-label {
       float: left;
-      padding: 0.5rem 1.5rem 1rem 0rem;
+      padding: 0 1.5rem 0 0;
       font-size: 1.28rem;
       font-weight: 100;
     }
   }
   .file-actionbar {
     display: inline-flex;
+    .file-status-button {
+      padding-left: 0.5rem;
+    }
     .rsa-form-button i {
       margin-right: 0;
     }
